changes for manage peers
Change-Id: I78285705c8eb995b8f101e0d658037f5ddfa438d
Issue-ID: ACUMOS-3438,ACUMOS-3437,ACUMOS-3439
Description: IST: Validation Message need to improve for ACUMOS-2119
Signed-off-by: Neeraj Bhatnagar (nb7616) <NB00508933@techmahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/header/sidebar-nav.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/header/sidebar-nav.template.html
@@ -37,7 +37,7 @@ limitations under the License.
 				<span class="headertxtspan">My Models</span>
 			</a>
 			
-			<a ng-if="$root.userRolePublisher" class="mdl-navigation__link" ng-class="{ active: isActive('/catalog') }" ui-sref="catalog" title="Catalogs"  ng-click="$root.parentActive = ''">
+			<a ng-if="$root.userRolePublisher" class="mdl-navigation__link" ng-class="{ active: (isActive('/catalog') ) || $root.parentActive == 'catalog' }" ng-click="$root.parentActive = 'catalog'" ui-sref="catalog" title="Catalogs"  ng-click="$root.parentActive = ''">
 		    	<span class="icon-header icon-catalogs"></span>
 		    	<span class="headertxtspan">Catalogs</span>
 		    </a>
