--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -608,7 +608,7 @@ limitations under the License.
 	
                                                <div class="c-alert-inner"><span class="material-icons">info_outline</span>
 	
-                                               <span class="alert-text">You cannot publish the catalog without entering the author name. Please add author name in the  "Manage Publisher/Authors" page to publish it.</span></div>
+                                               <span class="alert-text">You cannot publish the model without entering the author name. Please add author name in the  "Manage Publisher/Authors" page to publish it.</span></div>
 
                                          </div>
 								<div>
