Publisher user guide is missing information added
Issue-ID: ACUMOS-3444, ACUMOS-3447
Description: Publisher user guide is missing information added

Change-Id: I7ee12bf23f6aef1fa9e4f8b074229b2d5bd09219
Signed-off-by: Neeraj Bhatnagar (nb7616) <NB00508933@techmahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/header/md-header-nav.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/header/md-header-nav.template.html
@@ -67,7 +67,7 @@ limitations under the License.
 				class="mdl-navigation__link" ui-sref="modularResource" ng-click="hambergerClicked=!hambergerClicked;menuShow=!menuShow"
 				ui-sref-active="active" ng-show="$root.enableOnBoarding">
 					<span class="icon-header icon-onboarding-model"></span>
-		    		<span class="headertxtspan">MODELER RESOURCES</span>
+		    		<span class="headertxtspan">ON-BOARDING MODEL</span>
 				</a> 
 				
 				<a ng-click="hambergerClicked=!hambergerClicked;menuShow=!menuShow"
