--- a/acumos-portal-fe/src/main/webapp/app/header/sidebar-nav.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/header/sidebar-nav.template.html
@@ -42,7 +42,7 @@ limitations under the License.
 		    	<span class="headertxtspan">Catalogs</span>
 		    </a>
 				
-		    <a ng-if="$root.enableOnBoarding" class="mdl-navigation__link" ng-class="{ active: isActive('/modelerResource') }" ui-sref="modularResource" title="Modeler Resources"  ng-click="$root.parentActive = ''">
+		    <a ng-if="$root.enableOnBoarding" class="mdl-navigation__link" ng-class="{ active: isActive('/modelerResource') }" ui-sref="modularResource" title="On-Boarding Model"  ng-click="$root.parentActive = ''">
 		    	<span class="icon-header icon-onboarding-model"></span>
 		    	<span class="headertxtspan">ON-BOARDING MODEL</span>
 		    </a> 
@@ -99,7 +99,7 @@ limitations under the License.
 		    	<span class="headertxtspan">CATALOGS</span>
 		    </a>
 		    
-		    <a ng-if="$root.enableOnBoarding" class="mdl-navigation__link" ng-class="{ active: isActive('/modelerResource') }" ui-sref="modularResource" title="Modeler Resources"  ng-click="$root.parentActive = '';hamberClick()">
+		    <a ng-if="$root.enableOnBoarding" class="mdl-navigation__link" ng-class="{ active: isActive('/modelerResource') }" ui-sref="modularResource" title="On-Boarding Model"  ng-click="$root.parentActive = '';hamberClick()">
 		    	<span class="icon-header icon-onboarding-model"></span>
 		    	<span class="headertxtspan">ON-BOARDING MODEL</span>
 		    </a> 
