--- a/acumos-portal-fe/src/main/webapp/app/footer/md-footer.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/footer/md-footer.template.html
@@ -41,7 +41,7 @@ limitations under the License.
 						<li><i class="fas fa-angle-right"></i><a ui-sref="home" ng-click="$root.parentActive = ''">Home</a></li>
 						<li><i class="fas fa-angle-right"></i><a ui-sref="marketPlace">Marketplace</a></li>
 						<!-- <li><a ui-sref="manageModule">Manage my models </a></li> -->
-						<li ng-if="$root.enableOnBoarding"><i class="fas fa-angle-right"></i><a ui-sref="modularResource">Modeler Resources</a></li>
+						<li ng-if="$root.enableOnBoarding"><i class="fas fa-angle-right"></i><a ui-sref="modularResource">On-Boarding Model</a></li>
 						<!-- <li><a ui-sref="designStudio">Design Studio</a></li> -->
 						<li><i class="fas fa-angle-right"></i><a ui-sref="termsCondition">Terms And Conditions</a></li>
 						<li><i class="fas fa-angle-right"></i><a href="{{docUrl}}" target="_blank">Documentation</a></li>
