Added Automatic Rating
Issue-ID: ACUMOS-3349
Description - As a user, I want Acumos to automatically add a star rating while I publish my model from private to the Marketplace.

Change-Id: Ib39faf57c5995e9b4215ad3278ee974559f5b953
Signed-off-by: Tausif Khanooni (tk0051225) <tk0051225@techmahindra.com>

--- a/acumos-portal-fe/src/main/webapp/index.html
+++ b/acumos-portal-fe/src/main/webapp/index.html
@@ -305,6 +305,9 @@ limitations under the License.
 
 	<!-- <script src="app/app-directives/ck-editor.directive.js"></script>	 -->
 	<script src="app/app-filters/htmlToPlainText.filter.js"></script> 
+	
+	<script src="app/app-directives/description-rating.js"></script> 
+	
 	<script src="app/app-filters/bytesToSize.filter.js"></script>
 	<script src="app/app-directives/imageupload.js"></script>
 	<script src="app/resources/angular-jwt.js"></script>
