License Profile and LicenseProfile Validation
Change-Id: I698e0cd5e1ef4eb7a99ab0411088ece11b604263
ISSUE-ID: ACUMOS-3030, ACUMOS-3338
Signed-off-by: Tausif Khanooni (tk0051225) <tk0051225@techmahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -401,7 +401,7 @@ limitations under the License.
 																		      <md-radio-button value="selectLicProfile" ng-if="allTemplates"> Select License Profile </md-radio-button>
 																		    </md-radio-group>
 																		    <b>OR</b>
-																		    <button id="create-new-button" ng-click="createNewLicenseProfileTemplate($event, true)"					
+																		    <button id="create-new-button" ng-click="createNewLicenseProfileTemplate($event, false)"					
 																				class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Create New License" title="Create New License">
 																				Create New</button>
 																		    </div>
@@ -412,14 +412,14 @@ limitations under the License.
 																				</md-select>
 																				</div>
 																				<div class="mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone">
-																				 <button ng-click="modifyLicenseProfileTemplate($event, true)"					
+																				 <button ng-click="modifyLicenseProfileTemplate($event, false)"					
 																					class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Modify License" title="Modify License">
 																				Modify</button>
 																		    	</div>
 																		    </div>
 																		</div>																		
 
-																		<div ng-show="licenseOption=='Upload'" >
+																		<div ng-show="licenseOption=='Upload'">
 																			<div
 																			class="mdl-textfield mdl-js-textfield mdl-textfield--file has-placeholder is-upgraded upload-image-input"
 																			data-upgraded=",MaterialTextfield">
