LicenseProfile integration and JUnit TC
Change-Id: I1a8534811125eed88a44368b5e44a9a6f078b985
ISSUE-ID: ACUMOS-3030
Signed-off-by: Tausif Khanooni (tk0051225) <tk0051225@techmahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -575,8 +575,11 @@ limitations under the License.
 									     </div>
 									</div>
 									<small>Maximum file size: 1mb | Supported files type: .json</small>	
-									<div>
-										<small ng-show="modelUploadError" style="color:red"><strong>Error Occurred:</strong> {{modelUploadErrorMsg}}</small>
+									<div style="color:red">
+										<small ng-show="modelLicUploadError"><strong>Error occurred while license validation:</strong></small>
+										<ul ng-repeat="error in modelLicUploadErrorMsg">
+											<li ng-if="error">{{error}}</li>
+										</ul>
 									</div>
 									<div class="clear_both"></div>
 								</div>
