--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/license-profile-editor-dialog.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/license-profile-editor-dialog.template.html
@@ -25,7 +25,7 @@ limitations under the License.
                 TODO license-profile-editor - for DEV (local) testing > access as
                 http://localhost:8089/license-profile-editor/?mode=iframe
             -->
-            <iframe id="iframe-license-profile-editor" src="http://cognita-dev1-vm01-core.eastus.cloudapp.azure.com:8087/license-profile-editor/?mode=iframe"
+            <iframe id="iframe-license-profile-editor" ng-src="{{$root.licenseProfileUrl}}"
                 frameborder="0" style="position: absolute; width: 100%; height: 100%;"></iframe>
         </md-dialog-content>
     </form>
