--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -1202,7 +1202,7 @@ limitations under the License.
 			</md-toolbar>
 			<md-dialog-content>
 			<div class="md-dialog-content">
-				<p class="wrap_text">Please choose any version of
+				<p class="wrap_text">Please choose any file of
 					{{solution.name}} from below.</p>
 		
 
@@ -1219,7 +1219,7 @@ limitations under the License.
 							<label class="downloadlbl2"><span class="font600">Uploaded
 							on</span> - {{value.created | date:'MM/dd/yyyy'}}</label>
 					</div>
-					<md-button class="md-raised mdl-js-button btn-secondary" ng-disabled="value.mask" ng-click="downloadArtifact(value.artifactId)">
+					<md-button class="mdl-button mdl-js-button btn-primary" ng-disabled="value.mask" ng-click="downloadArtifact(value.artifactId)">
 						Download
 					</md-button>
 				</div>
