Removed Message Option
Issue-ID: ACUMOS-3158.
Description: Sharing Model: Message is not displaying anywhere which user
is giving at the time of sharing of model.

Change-Id: Ieb7fdc091e52332581aa23831b31cacfc151e62d
Signed-off-by: Sovit <SS00507275@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -433,7 +433,7 @@ limitations under the License.
 											</md-content>
 
 										</div>
-										<div
+										<!-- <div
 											class="mdl-textfield mdl-js-textfield is-upgraded fullwidth"
 											data-upgraded=",MaterialTextfield">
 											<label>Message(optional)</label>
@@ -443,7 +443,8 @@ limitations under the License.
 												id="sample5"
 												placeholder="I would like to share an AI Model with you."></textarea>
 
-										</div>
+										</div> -->
+										<br><br>
 
 										<div>
 
