Forgot Password Message
Issue-Id: ACUMOS-3470
Description: Forgot Password Message need to corrected in forgot password popup

Change-Id: I3241422dd2e8a4a4ed8775f33495fd4104059cda
Signed-off-by: mcapraful <PD00618320@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/header/md-header-nav.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/header/md-header-nav.template.html
@@ -407,7 +407,7 @@ limitations under the License.
 		<md-dialog-content>
 		<div class="md-dialog-content">
 			<p>Please enter your email address and we will send you a new
-				password reset link.</p>
+				password.</p>
 
 			<div>
 				<md-input-container class="md-block"> <input
