register call when publishin solution and hide rtu
Change-Id: Iab1da770d8373a8957425964340dd8030c8ceefd
ISSUE-ID: ACUMOS-3340 , ACUMOS-3461
Description: Portal - Use LicenseAsset.registerAsset when a solution is published
Signed-off-by: Neeraj Bhatnagar (nb7616) <NB00508933@techmahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
@@ -70,12 +70,14 @@ limitations under the License.
 								class="tab-icons tab-site_configuration"></span> <span>Site
 									Configuration</span>
 						</span>
-						</a> <a href="#tab8-panel" ng-click='menuName = "RTU Configuration"'
+						</a> 
+						<!-- <a href="#tab8-panel" ng-click='menuName = "RTU Configuration"'
 							class="mdl-tabs__tab"> <span class="tab-box"> <span
 								class="tab-icons tab-rtu_configuration"></span> <span>RTU
 									Configuration</span>
 						</span>
-						</a> <a href="#tab9-panel" ng-click='menuName = "Maintained Backup Logs"; getMaintainedBackupLogs();'
+						</a>  -->
+						<a href="#tab9-panel" ng-click='menuName = "Maintained Backup Logs"; getMaintainedBackupLogs();'
 							class="mdl-tabs__tab"> <span class="tab-box"> <span
 								class="tab-icons tab-maintained_logs"></span> <span>Maintained 
 								Backup Logs</span>
