--- a/acumos-portal-fe/src/main/webapp/app/market_place/md-manage-module.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/market_place/md-manage-module.template.html
@@ -662,6 +662,9 @@ limitations under the License.
 								<div class="grid-item-error-container" ng-show="public.onboardingStatusFailed">
 									<div class="grid-error-msg"> <span class="grid-error-icon">&#33;</span> Error found </div>
 								</div>
+								<div class="grid-item-error-container" ng-show="publicSolution.pendingApproval" ng-click="onClickModel(publicSolution.solutionId, publicSolution.ownerId, publicSolution.latestRevisionId)">
+									<div class="grid-error-msg"> Pending for approval </div>
+								</div>
 							</div>
 						</div>
 						<div class="mp-grid-list" ng-show="!Viewtile">
@@ -754,7 +757,11 @@ limitations under the License.
 
 									</div>
 								</div>
+								<div class="grid-item-error-container" ng-show="mlsolution.pendingApproval" ng-click="onClickModel(mlsolution.solutionId, mlsolution.ownerId, mlsolution.latestRevisionId)">
+									<div class="grid-error-msg"> Pending for approval </div>
+								</div>
 							</div>
+							
 						</div>
 					</div>
 					<div class="text-center" ng-if="seeAllSelected">
