Modify onboarding page text for Java Spark
Updated specific selections of text on onboarding page to reference
"Java (Generic, H2O or Spark)" as opposed to "Java or H2O".

Issue-Id: ACUMOS-3530
Change-Id: I9e6093413fee446366b66df676a7b2607f199d05
Signed-off-by: swood8 <SW0C74397@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -94,12 +94,12 @@ limitations under the License.
 														<article>R</article>														
 													</div>
 											</a></li>
-											<li><a href="#cloud" class="mdl-tabs__tab" title="Java" ng-click="toolkitHeader='Java and H2O'"> 
+											<li><a href="#cloud" class="mdl-tabs__tab" title="Java" ng-click="toolkitHeader='Java (Generic, H2O, Spark)'"> 
 											<div class="managelefticon">
 											 <i class="java"></i> 											 
 											</div>
 													<div class="managelefttext">
-														<article>Java and H2O</article>														
+														<article>Java (Generic, H2O, Spark)</article>														
 													</div>
 											</a></li>
 											<li><a href="#company" class="mdl-tabs__tab" title="TensorFlow" ng-click="toolkitHeader='Python, Tensor Flow, Keras and Scikit Learn'"> 
@@ -134,7 +134,7 @@ limitations under the License.
 									<!-- cloud start -->
 									
 									<div class="mdl-tabs__panel timeline" id="cloud">
-										<p style="margin:0 0 0px">You can find all the explanations to onboard a Java or H2O model by CLI here</p>
+										<p style="margin:0 0 0px">You can find all the explanations to onboard a Java (Generic, H2O or Spark) model by CLI here</p>
 										<a href="https://docs.acumos.org/en/latest/submodules/acumos-java-client/docs/onboarding-java-guide.html" target="_blank">https://docs.acumos.org/en/latest/submodules/acumos-java-client/docs/onboarding-java-guide.html</a>
 									</div>
 									<!-- cloud end -->
@@ -502,7 +502,7 @@ limitations under the License.
 												<h5>Instructions for preparing a model bundle</h5>
 													<p><a href="https://docs.acumos.org/en/latest/submodules/acumos-r-client/docs/onboarding-r-guide.html" target="_blank">Create a R model bundle</a></p>
 													<p><a href="https://pypi.org/project/acumos/#exporting-models" target="_blank">Create a Python model bundle</a></p>
-													<p><a href="https://docs.acumos.org/en/latest/submodules/acumos-java-client/docs/onboarding-java-guide.html" target="_blank">Create a Java or H20 model bundle</a></p>
+													<p><a href="https://docs.acumos.org/en/latest/submodules/acumos-java-client/docs/onboarding-java-guide.html" target="_blank">Create a Java (Generic, H2O or Spark) model bundle</a></p>
 													<p><a href="https://docs.acumos.org/en/latest/submodules/on-boarding/docs/onboarding-ONNX-PFA-guide.html" target="_blank">On-board an ONNX or PFA model</a></p>
 											</div>								  
 								  </div>								 
