ui fixess in licensing
Change-Id: I30270830d1437b203fecbab69fa3a06273177f43
ISSUE-ID: ACUMOS-3495
Signed-off-by: Ashwini Chitnis <ac00493930@techmahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -574,15 +574,16 @@ limitations under the License.
 									     	<i class="material-icons">close</i>
 									     </div>
 									</div>
-									<small>Maximum file size: 1mb | Supported files type: .json</small>	
-									<div style="color:red">
-										<small ng-show="modelLicUploadError"><strong>Error occurred while license validation:</strong></small>
-										<ul ng-repeat="error in modelLicUploadErrorMsg">
-											<li ng-if="error">{{error}}</li>
-										</ul>
-									</div>
+
 									<div class="clear_both"></div>
 								</div>
+								<small>Maximum file size: 1mb | Supported files type: .json</small>																	
+								<div class="upload-error">
+									<small ng-show="modelUploadErrorMsg"><strong>Please update the license profile to correct the following validation errors:</strong></small>
+									<ul>
+										<li ng-repeat="error in modelUploadErrorMsg"><span>{{error}}</span></li>
+									</ul>
+								</div>	
 							</div>
 						</div>
 					</div>
