Add Acumos C client link to onboarding page
Added "Create a C++ model bundle" option and link to "Onboarding by Web"
in order to provide instructions for C++ model support.

Issue-Id: ACUMOS-3503
Change-Id: Ib96ee6c16a3cf2bd743ab65da8f05b35dfc6d814
Signed-off-by: swood8 <SW0C74397@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -502,6 +502,7 @@ limitations under the License.
 												<h5>Instructions for preparing a model bundle</h5>
 													<p><a href="https://docs.acumos.org/en/latest/submodules/acumos-r-client/docs/onboarding-r-guide.html" target="_blank">Create a R model bundle</a></p>
 													<p><a href="https://pypi.org/project/acumos/#exporting-models" target="_blank">Create a Python model bundle</a></p>
+													<p><a href="https://docs.acumos.org/en/latest/submodules/acumos-c-client/docs/onboarding-Cpp-guide.html" target="_blank">Create a C++ model bundle</a></p>
 													<p><a href="https://docs.acumos.org/en/latest/submodules/acumos-java-client/docs/onboarding-java-guide.html" target="_blank">Create a Java (Generic, H2O or Spark) model bundle</a></p>
 													<p><a href="https://docs.acumos.org/en/latest/submodules/on-boarding/docs/onboarding-ONNX-PFA-guide.html" target="_blank">On-board an ONNX or PFA model</a></p>
 											</div>								  
