Tool tip is changed to Manage Peer in Catalogs
ISSUE ID#ACUMOS-3532

Signed-off-by: vasudevaraok <vasudevar@techmahindra.com>
Change-Id: I3f602066b13342fcc173e3eb07d6f188a2d07588

--- a/acumos-portal-fe/src/main/webapp/app/catalog/catalog.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/catalog/catalog.template.html
@@ -147,7 +147,7 @@ limitations under the License.
 									class="mdl-button mdl-js-button mdl-button--icon">
 									<span class="gridicon-edit"></span>
 								</button>
-								<button ui-sref="managePeer({catalogName:catalog.name,catalogId:catalog.catalogId})" alt="managePeer" title="managePeer"
+								<button ui-sref="managePeer({catalogName:catalog.name,catalogId:catalog.catalogId})" alt="managePeer" title="Manage Peer"
 									class="mdl-button mdl-js-button mdl-button--icon" ng-style="catalog.accessTypeCode == 'PB' && {'cursor' : 'not-allowed', 'opacity' : 0.5}">
 									<span class="gridicon-access"></span>
 								</button>
