fix for UI issues
Issue-ID: ACUMOS-3511.  Issue-ID: ACUMOS-3525.
Description:Alignment of Introduction word is incorrect on model description screen
Change-Id: Iff5e8644ac8ff0cc06acfbf74a6356e6971a6e79
Signed-off-by: Sovit <SS00507275@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -393,8 +393,8 @@ limitations under the License.
 																				</md-select>
 																			</div>
 																		</div>
-																		<div id="modelName">																							
-																			<span>License Profile</span>
+																		<div id="modelName" class="upload-model-bundle-left">																							
+																			<h5>License Profile</h5>
 																			<div id="modelName">
 																			<md-radio-group ng-model="licenseOption" id="licenseOption"  ng-change="modelLicUploadError=false">
 																		      <md-radio-button value="Upload">Upload</md-radio-button>
