Placeholder of search filter
Change-Id: I92123541a433f30b4cb9ccaa695e4de8d0bc80c0
Issue-Id: ACUMOS-3439
Description: Placeholder of search filter need to match with VD
Signed-off-by: mcapraful <PD00618320@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/catalog/manage-peer.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/catalog/manage-peer.template.html
@@ -145,7 +145,7 @@ limitations under the License.
 			<div class="text-right">
 				<div class="mdl-js-textfield modal-search-container">
 					<input class="model-search-control" type="text"
-						placeholder="Search by Name" ng-model="searchPeer">
+						placeholder="Search by name" ng-model="searchPeer">
 				</div>
 			</div>
 			<div>
