Disable Grant Access button for no results
When searching for new peers for catalog access, fixed bug where
selecting 'all' checkbox when search result list was empty would enable
the Grant Access button.

Issue-Id: ACUMOS-3528
Change-Id: I8c54d20a5ae4a431b6bd78a4ca496dab96d9e8ef
Signed-off-by: swood8 <SW0C74397@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/catalog/manage-peer.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/catalog/manage-peer.template.html
@@ -158,7 +158,7 @@ limitations under the License.
 					</colgroup>
 					<thead>
 						<tr>
-							<th><md-checkbox ng-model="selectAll" ng-click="grantAccessToAll(selectAll)"></md-checkbox></th>
+							<th><md-checkbox ng-model="selectAll" ng-click="grantAccessToAll(!selectAll)"></md-checkbox></th>
 							<th
 								ng-click="orderByField='name'; reverseSort = !reverseSort">Peer Name<span ng-if='orderByField!="name"'
 								class="gridcell-sort deactivate"></span><span
