--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -479,7 +479,7 @@ limitations under the License.
 						<h6 class="sectiontitle6">LICENSE PROFILE</h6>
 						<div class="clear_both"></div>
 						<div>
-							<button class="mdl-button pull-right mdl-js-button mdl-js-ripple-effect btn-secondary-small" ng-show="changeLicense==true" ng-click="changeLicense=false">
+							<button class="mdl-button pull-right mdl-js-button mdl-js-ripple-effect btn-secondary-small licence-closebtn" ng-show="changeLicense==true" ng-click="changeLicense=false">
 	                              Close
 							</button>
 						</div>
@@ -501,7 +501,7 @@ limitations under the License.
 									class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Create New License" title="Create New License">
 									Create New</button>
 									
-								<div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="mdl-grid">
+								<div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="license-detail-form mdl-grid">
 								    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone">
 									    <md-select ng-model="$parent.selectedLicense">
 									    	<md-option value="{{$index}}" ng-repeat='template in allTemplates'>{{template.templateName}}</md-option>
